--- a/synematic.html
+++ b/synematic.html
@@ -1,5 +1,6 @@
 <head>
   <title>synematic</title>
+  <link href='http://fonts.googleapis.com/css?family=Lily+Script+One' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -7,7 +8,9 @@
 </body>
 
 <template name="hello">
-  <h1>Hello World!</h1>
+
+  <span class="logo">Synematic</span>
+
   {{greeting}}
   <input type="button" value="Click" />
 </template>
