--- a/synematic.html
+++ b/synematic.html
@@ -5,7 +5,16 @@
 
 <body>
   {{> hello}}
+  {{> video}}
 </body>
+
+<template name="video">
+  <video id="example_video_1" class="video-js vjs-default-skin"
+    controls preload="auto" width="640" height="264"
+    data-setup='{"example_option":true}'>
+   <source src="https://s3-us-west-2.amazonaws.com/tinymovieroom/CHLv53tSDeXPavhuCAXH_Daft+Punk+-+Get+Lucky+__+George+Barnett+cover.mp4" type='video/mp4' />
+  </video>
+</template>
 
 <template name="hello">
 
