--- a/client/main.html
+++ b/client/main.html
@@ -6,6 +6,7 @@
 <body>
   {{> hello}}
   {{> video}}
+  {{> body }}
 </body>
 
 <template name="video">
@@ -24,4 +25,32 @@
   <input id="button" type="button" value="Click" />
 
   <input type="button" id="attachment" value="Upload">
+</template>
+
+<template name ="body">
+  {{renderPage layoutName}}
+</template>
+
+<template name="roomLayout">
+  <h1> Enter Room Name </h1>
+  {{renderPage}}
+</template>
+<template name="uploadLayout">
+  <h1>Upload Movie </h1>
+  {{renderPage}}
+
+</template>
+
+<template name="roomPage">
+  <input type="text" id="room" />
+  </br>
+  <input type="button" value="Enter" onclick="window.open('/upload')" />
+  </br>
+</template>
+
+
+<template name="uploadPage">
+Upload your movie:
+</br>
+<input type="filepicker" id="attachment">   
 </template>
