Removed Routing to Upload

--- a/client/home.html
+++ b/client/home.html
@@ -25,7 +25,7 @@
 <template name="roomPage">
   <input type="text" id="room" />
   </br>
-  <input type="button" value="Enter" onclick="window.open('/upload')" />
+  <input type="button" value="Enter" />
   </br>
 </template>
 
