routing room id

--- a/client/main.html
+++ b/client/main.html
@@ -32,6 +32,15 @@
   {{renderPage}}
 </template>
 
+<template name="roomLayout">
+  <div>ROOM</div>
+  {{renderPage}}
+</template>
+
+<template name="room">
+  {{roomId}}
+</template>
+
 <template name="home">
   <input type="text" id="roomNumber" />
   </br>
