--- a/client/main.html
+++ b/client/main.html
@@ -5,10 +5,34 @@
 
 <body>
   <span class="logo">Synematic</span>
-  {{> content }}
-  {{> upload }}
- 
+  {{ renderPage }}
 </body>
+
+<!-- Templates for Pages -->
+
+<template name="home">
+  Enter Room Name:
+  <input type="text" id="roomNumber" />
+</template>
+
+<template name="about">
+  Built in 24 hours by Kenny Song, Joshua Angelucci, and Amey Desai.
+</template>
+
+<template name="room">
+  {{roomId}}
+</template>
+
+<template name="error">
+  Page not found.
+</template>
+
+<!-- Templates for Snippets -->
+
+<template name="upload">
+  Upload your video file:
+  <input type="button" id="attachment" value="Upload">
+</template>
 
 <template name="video">
   <video id="example_video_1" class="video-js vjs-default-skin"
@@ -16,37 +40,4 @@
     data-setup='{"example_option":true}'>
    <source src="https://s3-us-west-2.amazonaws.com/tinymovieroom/CHLv53tSDeXPavhuCAXH_Daft+Punk+-+Get+Lucky+__+George+Barnett+cover.mp4" type='video/mp4' />
   </video>
-</template>
-
-<template name ="content">
-  {{renderPage layoutName}}
-</template>
-
-<template name="homeLayout">
-  <h1> Enter Room Name </h1>
-  {{renderPage}}
-</template>
-
-<template name="aboutLayout">
-  <div>About alsdjglkasd</div>
-  {{renderPage}}
-</template>
-
-<template name="roomLayout">
-  <div>ROOM</div>
-  {{renderPage}}
-</template>
-
-<template name="room">
-  {{roomId}}
-</template>
-
-<template name="home">
-  <input type="text" id="roomNumber" />
-  </br>
-</template>
-
-<template name="upload">
-  Upload your video file:
-  <input type="button" id="attachment" value="Upload">
 </template>
