--- a/client/synematic.html
+++ b/client/synematic.html
@@ -3,6 +3,7 @@
   <link href='http://fonts.googleapis.com/css?family=Lily+Script+One' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic|Pontano+Sans' rel='stylesheet' type='text/css'>
   <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
+  <script src="http://static.opentok.com/v1.1/js/TB.min.js" ></script>
 </head>
 
 <body>
@@ -77,6 +78,8 @@
 
 <template name="room">
   {{roomId}}
+  {{> video}}
+  {{> chat}}
 </template>
 
 <template name="error">
@@ -93,4 +96,7 @@
    <source src="https://s3-us-west-2.amazonaws.com/tinymovieroom/CHLv53tSDeXPavhuCAXH_Daft+Punk+-+Get+Lucky+__+George+Barnett+cover.mp4" type='video/mp4' />
   </video>
 
+</template>
+
+<template name="chat">
 </template>
