resized the tokbox videos

--- a/client/synematic.html
+++ b/client/synematic.html
@@ -79,7 +79,10 @@
 <template name="room">
   {{roomId}}
   {{> video}}
-  {{> chat}}
+  
+  <div style="position:relative;top: 135px;left: 80px;">
+    {{> chat}}
+  </div>
 </template>
 
 <template name="error">
