--- a/client/synematic.html
+++ b/client/synematic.html
@@ -73,20 +73,31 @@
 </template>
 
 <template name="about">
-  <div>Built in 24 hours by Kenny Song, Joshua Angelucci, and Amey Desai.</div>
+  <div id="stepthree" style="position:relative">
+    <div class="steptext">Built in 24 hours by Kenny Song, Joshua Angelucci, and Amey Desai.</div> 
+  </div>
 </template>
 
 <template name="room">
   {{roomId}}
   {{> video}}
-  
-  <div style="position:relative;top: 135px;left: 80px;">
-    {{> chat}}
-  </div>
+  {{> chat}}
 </template>
 
 <template name="error">
   Page not found.
+</template>
+
+<template name="faq">
+  <div id="stepone" style="position:relative;top: 30px">
+    <div style="position:absolute;font-size:24px;top: 10px;left: 73px;">Q1. Create a virtual room</div>
+    <div style="position:absolute;font-size:24px;top: 40px;left: 73px;">A1. All the answers are belong to us.</div>
+    <div style="position:absolute;font-size:24px;top: 90px;left: 73px;">Q2. Create a virtual room</div>
+    <div style="position:absolute;font-size:24px;top: 120px;left: 73px;">A2. All the answers are belong to us.</div>
+    <div style="position:absolute;font-size:24px;top: 170px;left: 73px;">Q3. Create a virtual room</div>
+    <div style="position:absolute;font-size:24px;top: 200px;left: 73px;">A3. All the answers are belong to us.</div>
+  
+  </div>
 </template>
 
 <!-- Templates for Snippets -->
