--- a/client/synematic.html
+++ b/client/synematic.html
@@ -3,7 +3,10 @@
   <link href='http://fonts.googleapis.com/css?family=Lily+Script+One' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic|Pontano+Sans' rel='stylesheet' type='text/css'>
   <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
-  <script src="http://static.opentok.com/v1.1/js/TB.min.js" ></script>
+
+
+    <link rel="stylesheet" href="/theme/maccaco/projekktor.style.css" type="text/css" media="screen" />
+
 </head>
 
 <body>
@@ -78,9 +81,8 @@
 <!-- Snippet Templates -->
 
 <template name="video">
-  <video id="room_video" class="video-js vjs-default-skin"
-    controls preload="auto" width="640" height="264"
-    data-setup='{"example_option":true}'>
-   <source src="https://s3-us-west-2.amazonaws.com/tinymovieroom/CHLv53tSDeXPavhuCAXH_Daft+Punk+-+Get+Lucky+__+George+Barnett+cover.mp4" type='video/mp4' />
-  </video>
+    <video id="player_a" class="projekktor" poster="media/intro.png" title="this is Projekktor" width="640" height="385" controls>
+     <source src="https://s3-us-west-2.amazonaws.com/meteor-hackathon/llhZTMiQTgeCOFrV8Zsd_Running+Man+E152.mp4" type='video/mp4' />
+    </video>
+
 </template>
