--- a/client/synematic.html
+++ b/client/synematic.html
@@ -81,7 +81,7 @@
 <!-- Snippet Templates -->
 
 <template name="video">
-    <video id="player_a" class="projekktor" poster="media/intro.png" title="this is Projekktor" width="640" height="385" controls>
+    <video id="room_video" class="projekktor" poster="media/intro.png" title="this is Projekktor" width="640" height="385" controls>
      <source src="https://s3-us-west-2.amazonaws.com/meteor-hackathon/llhZTMiQTgeCOFrV8Zsd_Running+Man+E152.mp4" type='video/mp4' />
     </video>
 
