--- a/client/synematic.html
+++ b/client/synematic.html
@@ -3,7 +3,7 @@
   <link href='http://fonts.googleapis.com/css?family=Lily+Script+One' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic|Pontano+Sans' rel='stylesheet' type='text/css'>
   <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
-  <script src="http://static.opentok.com/v1.1/js/TB.min.js" ></script>
+  <!-- <script src="http://static.opentok.com/v1.1/js/TB.min.js" ></script> -->
 </head>
 
 <body>
@@ -17,6 +17,10 @@
       <a href="/about">About</a>
     </div>
 
+    <br />
+
+    <div class="alert alert-warning" role="alert">Synematic is currently unmaintained and non-functional. Thanks for your interest :)</div>
+
     {{ renderPage }}
 
   </div>
@@ -25,13 +29,13 @@
 <!-- Templates for Pages -->
 
 <template name="home">
+
   <center>
     <span id="create" style="display:inline-block;position:relative;left: 243px;">
       <div style="display:inline-block">
-      <input type="text" id="nameroom" class="textinput" placeholder="Name your room">
-      <input type="button" id="submitroom" class="btn btn-warning create" style="font-family:
-      'Pontano Sans';font-size:16px;" value="Create Room!"></input>
-    </div>
+        <input type="text" id="nameroom" class="textinput" placeholder="Name your room">
+        <input type="button" id="submitroom" class="btn btn-warning create" style="font-family:'Pontano Sans';font-size:16px;" value="Create Room!">
+      </div>
     </span>
 
     <span id="uploading" style="display:inline-block;position:relative;left:350px;top: 42px;visibility:hidden;opacity:0">
@@ -51,19 +55,19 @@
   <div id="stepone" class="step span4" style="position:relative">
     <div id="one">①</div>
     <div class="steptext">Create a virtual room</div>
-    <div style="position:absolute;font-size:12px;color:gray;top: 135px;left: 80px;">You'll get a private URL to share</div>
+    <div style="position:absolute;font-size:12px;color:gray;top: 135px;left: 140px;">You'll get a private URL to share</div>
     <i class="icon-comments" style="color: rgb(50, 79, 231);font-size: 120px; text-shadow: 1px 1px 1px rgb(170, 170, 170);"></i>
   </div>
   <div id="steptwo" class="step span4" style="position:relative">
     <div id="two">②</div>
     <div class="steptext">Upload a movie file</div>
-    <div style="position:absolute;font-size:12px;color:gray;top: 129px;left: 90px;">Max file size: 2GB </br> Best Format: .mp4 (h.264)</div>
+    <div style="position:absolute;font-size:12px;color:gray;top: 129px;left: 157px;">Max file size: 2GB <br/> Best Format: .mp4 (h.264)</div>
     <i class="icon-film" style="color:rgb(10, 175, 10);font-size: 100px;  text-shadow: 1px 1px 1px rgb(170, 170, 170);position:relative;top:10px;"></i>
   </div>
   <div id="stepthree" class="step span4" style="position:relative">
   <div id="three">③</div>
   <div class="steptext">Watch it with friends!</div>
-  <div style="position:absolute;font-size:12px;color:gray;top: 130px;left: 73px;">Play, pause, skip around together <br/> Talk in a group video chat</div>
+  <div style="position:absolute;font-size:12px;color:gray;top: 130px;left: 140px;">Play, pause, skip around together <br/> Talk in a group video chat</div>
   <i class="icon-user" style="color: rgb(235, 158, 16);position: relative;top:10px;left: 10px;font-size:86px;  text-shadow: 1px 1px 1px rgb(170, 170, 170);"></i>
   <i class="icon-user" style="color:  rgb(221, 82, 48);;position: relative;top: 30px;font-size:86px;  text-shadow: 1px 1px 1px rgb(170, 170, 170);"></i>
   <i class="icon-user" style="color: rgb(235, 158, 16);position: relative;top:10px;right: 10px;font-size:86px; text-shadow: 1px 1px 1px rgb(170, 170, 170);"></i>
@@ -102,14 +106,12 @@
 
 <!-- Templates for Snippets -->
 
-
 <template name="video">
   <video id="example_video_1" class="video-js vjs-default-skin"
     controls preload="auto" width="640" height="264"
     data-setup='{"example_option":true}'>
    <source src="https://s3-us-west-2.amazonaws.com/tinymovieroom/CHLv53tSDeXPavhuCAXH_Daft+Punk+-+Get+Lucky+__+George+Barnett+cover.mp4" type='video/mp4' />
   </video>
-
 </template>
 
 <template name="chat">
